--- a/index.html
+++ b/index.html
@@ -4,37 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Portfolio</title>
+    <link rel="stylesheet" href="./css/Style.css"/>
 </head>
 <body>
-<section>
-<div>
-    <h1>Hello I'm
-        <p>
-            Brooklyn Gilbert
-        </p>
-    </h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum sit amet alias fuga autem temporibus magnam delectus vel eveniet reiciendis, veritatis maiores voluptas quidem repudiandae dolores minima consequuntur unde, quisquam inventore officiis. Est, dignissimos maxime excepturi placeat dolorem debitis vel ducimus obcaecati labore cupiditate ipsam, at suscipit reprehenderit fugit repellendus!
-        </p>
-        <button>Say Hello</button>
+    <section>
+        <div class="left-side">
+           <div>
+            <h1>
+                Hello I'm 
+                <br>
+                Brooklyn Gilbert
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat, explicabo ea architecto accusantium nostrum tempora, fugit dicta optio delectus cumque sint maxime ab alias consequatur quis officia totam! Corrupti magni ullam optio beatae voluptatum minus libero repudiandae enim quam? Ipsam, harum! Quam nemo ab dolorem dignissimos reiciendis sequi quos officia!
+                </p>
+                <button>
+                    Hello
+                </button>
+            </h1>
+           </div>
+            <div class="exprience-area">
+                <div><h3> 15 Y.</h3>
+                    <span>Exprience</span></div>
+            <div><h3> 250</h3>
+                <span>Project Completed</span></div>
+            <div><h3> 58</h3>
+                <span>Happy Client</span></div>
+            </div>
         </div>
-<div>
-        <h3>15 Years</h3>
-        <span>Experience</span>
+        
+        
+        <div class="right-side">
+            <img src="./images/HERO.png">
         </div>
-
-       <div> <h3>259+</h3>
-        <span>Project Completed</span>
-        </div>
-<div>
-        <h3>58</h3>
-        <span>Happy Client</span>
-        </div>
-
-<div>
-    <IMg src="./images/HERO.png"/>
-</div>
-
-</section>
+    </section>
 </body>
 </html>
