--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
              </div>
     </nav>
 
-    <section id="Hero About" class="container">
-       <div id="Hero">
-        <div class="Hero_left_side">
-            <div class="Hero_description">
+    <section id="hero_about" class="container">
+       <div id="hero">
+        <div class="hero_left_side">
+            <div class="hero_description">
                 <h1>Hello, I’m Brooklyn Gilbert</h1>
                   <p>I'm a Freelance UI/UX Designer and Developer based in London, England. I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
                   <button>Say Hello</button>
@@ -53,13 +53,13 @@
                 
             </div>
         </div>
-        <div class="Hero_right_side"> 
+        <div class="hero_right_side"> 
             <img src="./images/heroimg.png">
         </div>
        </div>
-       <div id="About">
+       <div id="about">
              <div class="left_side">
-                <img src="./images/about.png" alt="first image">
+                <img src="images/about.png" alt="">
                 <div class="social_media">
                     <div class="social_media">
                         <div class="social_media_icons">
@@ -89,8 +89,8 @@
                 I design and develop services for customers specializing creating stylish, modern websites, web services.
             </p>
             <div class="action">
-                <button class="Project_btn"> My Project</button>
-                <button class="Download_btn"> 
+                <button class="project_btn"> My Project</button>
+                <button class="download_btn"> 
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="m12 15.577l-3.539-3.538l.708-.72L11.5 13.65V5h1v8.65l2.33-2.33l.709.719zM5 19v-4.038h1V18h12v-3.038h1V19z"/></svg>
                     <span>Download CV</span>
                 </button>
