--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Portfolio</title>
-    <link rel="stylesheet" href="./css/Style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
     <nav id="navbar" class="container">
