--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Portfolio</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <link rel="stylesheet" href=".css/style.css"/>
 </head>
 <body>
     <nav id="navbar" class="container">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="hero_right_side"> 
-            <img src="./css/images/heroimg.png" alt="">
+            <img src="./css/images/about.png" alt="">
         </div>
        </div>
        <div id="about">
